[gd_scene load_steps=12 format=3 uid="uid://c8u56vxjpye0m"]

[ext_resource type="PackedScene" uid="uid://cqcebwwics8qm" path="res://modules/characters/enemies/enemy/enemy.tscn" id="1_eaksi"]
[ext_resource type="Script" path="res://modules/characters/enemies/test_enemy/test_enemy.gd" id="1_ir432"]
[ext_resource type="PackedScene" uid="uid://ch3ul6i7atdfe" path="res://modules/characters/enemies/test_enemy/states/test_enemy_combat.tscn" id="5_ar04s"]
[ext_resource type="PackedScene" uid="uid://deblu3dukpv2r" path="res://modules/state_machine/state_machine.tscn" id="5_owitf"]
[ext_resource type="PackedScene" uid="uid://cjylxrxyexj0d" path="res://modules/hurtbox/hurtbox.tscn" id="6_ms8t3"]
[ext_resource type="PackedScene" uid="uid://d2d7ml3nbpbr4" path="res://modules/characters/enemies/test_enemy/states/test_enemy_executing_action.tscn" id="6_qggqr"]
[ext_resource type="PackedScene" uid="uid://chsgems0eo4yj" path="res://modules/characters/enemies/test_enemy/actions/radial_shot.tscn" id="7_3fwef"]
[ext_resource type="PackedScene" uid="uid://b0mgu5qk45sc5" path="res://modules/health_component/health_component.tscn" id="8_obvcd"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_euajo"]
size = Vector2(32, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jere0"]
size = Vector2(32, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yplot"]
radius = 16.0
height = 54.0

[node name="TestEnemy" instance=ExtResource("1_eaksi")]
script = ExtResource("1_ir432")

[node name="StateMachine" parent="." index="0" instance=ExtResource("5_owitf")]
initial_state = NodePath("TestEnemyCombat")

[node name="TestEnemyCombat" parent="StateMachine" index="0" instance=ExtResource("5_ar04s")]

[node name="TestEnemyExecutingAction" parent="StateMachine" index="1" instance=ExtResource("6_qggqr")]

[node name="Sprite" type="Sprite2D" parent="." index="1"]
position = Vector2(0, -7)
texture = SubResource("PlaceholderTexture2D_euajo")

[node name="Collision" type="CollisionShape2D" parent="." index="2"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_jere0")

[node name="Hurtbox" parent="." index="3" instance=ExtResource("6_ms8t3")]
position = Vector2(0, -7)
collision_layer = 2
collision_mask = 16

[node name="Collision" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_yplot")

[node name="Actions" type="Node2D" parent="." index="4"]
position = Vector2(0, -7)

[node name="RadialShot" parent="Actions" index="0" instance=ExtResource("7_3fwef")]

[node name="HealthComponent" parent="." index="5" instance=ExtResource("8_obvcd")]
max_hp = 2
hp = 2

[connection signal="hit" from="Hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="hp_depleted" from="HealthComponent" to="." method="_on_health_component_hp_depleted"]

[editable path="Hurtbox"]
